# cgi

./: Cargo.toml  README.MD
.github/workflows/: cicd.yml  publish.yml
src/: main.rs
