[package]
name = "git-checkout-interactive"
version = "1.0.2"
edition = "2021"
description = "cli to switch between locally checked out branches interactively"
license = "MIT"
repository = "https://github.com/Mike-Neto/cgi"
keywords = ["git", "checkout", "branch"]
categories = ["command-line-utilities"]
readme = "README.MD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gci"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.79" }
dialoguer = { version = "0.11.0" }
git2 = { version = "0.18.2", default-features = false }
