[package]
name = "git-checkout-interactive"
version = "1.0.7"
edition = "2024"
description = "cli to switch between locally checked out branches interactively"
license = "MIT"
repository = "https://github.com/Mike-Neto/cgi"
keywords = ["git", "checkout", "branch"]
categories = ["command-line-utilities"]
readme = "README.MD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gci"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.100" }
dialoguer = { version = "0.12.0" }
git2 = { version = "0.20.2", default-features = false }
